edition = "2023";
package settings.v1alpha1.middleware.v1;

import "settings/v1alpha1/middleware/v1/logger.proto";
import "settings/v1alpha1/middleware/v1/headers.proto";

option go_package = "github.com/atlanticdynamic/firelynx/gen/settings/v1alpha1/middleware/v1";

// Middleware defines a middleware component
message Middleware {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_CONSOLE_LOGGER = 1;
    TYPE_HEADERS = 2;
  }

  // Unique identifier for this middleware
  // env_interpolation: no (ID field)
  string id = 1;
  
  // Middleware type
  // env_interpolation: n/a (non-string)
  Type type = 2;

  // Middleware-specific configuration
  oneof config {
    // Console logger middleware configuration
    // env_interpolation: n/a (non-string)
    ConsoleLoggerConfig console_logger = 100;
    
    // Headers middleware configuration
    // env_interpolation: n/a (non-string)
    HeadersConfig headers = 101;
  }
}
